Tweak styles to resolve accessibility issues
Added underline to links so they're not demarcated by colour only.
Added focus styling to logo and social links for keyboard users.
Made focus styling more consistent in header nav (previous styling was often too light for proper contrast).
Added focus styling to thumbnail images for keyboard.

--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -56,7 +56,6 @@ hr
   ------------------------------------	*/
 a
   color: $accent
-  text-decoration: none
   outline: 0
 
 a:hover, a:focus
