--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -10,7 +10,8 @@ header
     a
       display: inline-block
       color: rgba(0,0,0,1)
-      &:hover
+      &:hover,
+      &:focus
         color: $accent-color
   nav
     float: right
@@ -22,8 +23,12 @@ header
       font:
         size: 24px
         weight: 700
-      &:hover
+      &:hover,
+      &:focus,
         color: $accent-color
+  a
+    text-decoration: none
+
 
 // nav dropdown
 nav
